UtahLiveDataTest/src/objects/FundingOpportunityBudgetCategory__c.object
<CustomObject>
    <description>[Business]  This is for capturing Budget Category for FO.</description>
    <fields>
        <fullName>BudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Category</label>
        <referenceTo>BudgetCategory__c</referenceTo>
        <relationshipLabel>Funding Opportunity Budget Categories</relationshipLabel>
        <relationshipName>Funding_Opportunity_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Funding Opportunity Budget Categories</relationshipLabel>
        <relationshipName>Funding_Opportunity_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityBudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity Budget Period - Obso</label>
        <referenceTo>FundingOpportunityBudgetPeriod__c</referenceTo>
        <relationshipLabel>Funding Opportunity Budget Categories</relationshipLabel>
        <relationshipName>Funding_Opportunity_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityProjectArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity Project Area - Obsol</label>
        <referenceTo>AnnouncementServiceArea__c</referenceTo>
        <relationshipLabel>Funding Opportunity Budget Categories</relationshipLabel>
        <relationshipName>Funding_Opportunity_Budget_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Funding Opportunity Budget Categories</relationshipLabel>
        <relationshipName>Funding_Opportunity_Budget_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HideEditBtnForOrg__c</fullName>
        <formula>FundingOpportunity__r.HideEditBtnForOrg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditBtnForOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Edit Button</description>
        <formula>FundingOpportunity__r.HideDeleteBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RowNumber__c</fullName>
        <formula>BudgetCategory__r.RowsNumber__c</formula>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Funding Opportunity Budget Category</label>
    <nameField>
        <displayFormat>FOBC-{000}</displayFormat>
        <label>Funding Opportunity Budget Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Opportunity Budget Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>